# screenscribe

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
PRPs/: PRP-multi-backend-audio.md  approach-comparison.md  example-trading-pattern.md  prp_screenscribe_enhanced.md  screenscribe-fabric-wrapper.md
docs/: CLAUDE_DEVELOPMENT_LOG.md  DEVELOPMENT.md  FABRIC_INTEGRATION.md  MERGE_SUMMARY.md  PRD-updated.md  USER_MANUAL.md  api-reference.md  prd_screenscribe.md
docs/examples/: real-world-examples.md
docs/user/: installation.md  prompt-customization.md  troubleshooting.md  usage.md
examples/: trading-comparison.md
examples/trading-analysis/: transcript.json
fabric-extension/: FABRIC_PATTERNS.md  Makefile  README.md  VALIDATION.md  go.mod
fabric-extension/cmd/scribe/: caption_processor.go  errors.go  frame_selector.go  main.go  ollama_client.go  transcript_processor.go
fabric-extension/cmd/video_analyze/: main.go
fabric-extension/cmd/video_frames/: main.go
fabric-extension/cmd/whisper_transcribe/: main.go
fabric-extension/patterns/analyze_market_commentary/: system.md
fabric-extension/patterns/analyze_trading_video/: system.md
fabric-extension/patterns/analyze_video_content/: system.md
fabric-extension/patterns/extract_code_from_video/: system.md
fabric-extension/patterns/extract_technical_analysis/: system.md
fabric-extension/patterns/extract_trading_strategy/: README.md  eval.md  prompt.md  system.md
fabric-extension/scripts/: extract_frames.sh  predownload_mlx_models.py  whisper_wrapper.py  youtube_helper.py
prompts/: README.md  synthesis.md
prompts-trading/: synthesis.md
scripts/: benchmark_backends.py  install.sh  install_ffmpeg.sh
src/screenscribe/: __init__.py  __main__.py  align.py  audio.py  audio_backends.py  cli.py  config.py  config_enhanced.py  models.py  output.py  synthesis.py  updater.py  utils.py  video.py  youtube_enhanced.py
tests/: __init__.py  conftest.py  test_align.py  test_audio_backends.py  test_integration_backends.py  test_models.py
trading-prompts/: synthesis.md
